--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,9 @@
-@import "_variable.scss";
-@import "_reset.scss";
-@import "_typography.scss";
-@import "_button.scss";
-@import "_home.scss";
-@import "_header.scss";
-@import "_footer.scss";
-@import "_grid.scss";
-@import "_mixins.scss";
+@import "utils/_variable.scss";
+@import "utils/_mixins.scss";
+@import "base/_reset.scss";
+@import "base/_typography.scss";
+@import "components/_button.scss";
+@import "pages/_home.scss";
+@import "layout/_header.scss";
+@import "layout/_footer.scss";
+@import "layout/_grid.scss";
