--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ html:focus-within {
 }
 
 html,
-body {
+body,
+.localisation_search {
   min-height: 100%;
 }
 
@@ -23,12 +24,121 @@ img {
 li {
   list-style-type: none;
 }
-li a {
+
+a {
   text-decoration: none;
 }
 
-body {
+body, .localisation_search {
   font-family: "Roboto", sans-serif;
+  color: #000000;
+}
+
+.localisation_search {
+  font-size: 16px;
+  font-weight: 500;
+  color: #353535;
+}
+
+.presentation_title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+.presentation_desc {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 21px;
+  color: #353535;
+}
+
+.btn {
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.btn_1 {
+  padding: 18px 20px;
+  display: inline-block;
+  background: linear-gradient(0deg, #9356dc -5.2%, #ff79da 110.74%);
+  border-radius: 25px;
+  color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  transition: all 0.3s ease-in-out;
+}
+.btn_1:hover {
+  opacity: 85%;
+}
+
+.btn_2 {
+  padding: 20px 50px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+  border: none;
+  position: relative;
+}
+.btn_2:hover {
+  background-color: #f5edff;
+}
+.btn_2 .btn_2-1 {
+  padding: 5px;
+  height: 24px;
+  width: 24px;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: #9356dc;
+  color: #ffffff;
+  position: absolute;
+}
+
+.header_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-block: 15px;
+  margin-bottom: 5px;
+  box-shadow: 0px 5px 4px 0px rgba(0, 0, 0, 0.1490196078);
+}
+.header_container .header_logo {
+  width: 162px;
+}
+
+.localisation_container {
+  background-color: #eaeaea;
+  padding-block: 15px;
+}
+.localisation_container .localisation_form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.localisation_container .localisation_form .localisation_ico {
+  color: #353535;
+}
+.localisation_container .localisation_form .localisation_search {
+  text-align: center;
+  background-color: #eaeaea;
+  border: none;
+}
+
+.presentation {
+  background-color: #f7f7f7;
+}
+.presentation_container, .howToUse_container {
+  text-align: center;
+  padding-block: 40px;
+  padding-inline: 20px;
+}
+.presentation_container .presentation_desc, .howToUse_container .presentation_desc {
+  margin-block: 20px;
+}
+
+.howToUse_container .howToUse_title {
+  text-align: left;
+  margin-bottom: 25px;
 }
 
 /*# sourceMappingURL=style.css.map */
