--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,6 +1,29 @@
 body {
   font-family: "Roboto", sans-serif;
+  color: $clrNeutral900;
 }
 // h2 {
 //   font-family: "Shrikhand", cursive;
 // }
+.localisation_search {
+  @extend body;
+  font-size: $fs16;
+  font-weight: $fw500;
+  color: $clrTxtGrey;
+}
+.presentation_title {
+  font-size: $fs24;
+  font-weight: $fw700;
+  line-height: 28px;
+}
+.presentation_desc {
+  font-size: $fs18;
+  font-weight: $fw300;
+  line-height: 21px;
+  color: $clrTxtGrey;
+}
+.btn {
+  font-size: $fs16;
+  font-weight: $fw500;
+  color: $clrNeutral100;
+}
