--- a/scss/utils/_variable.scss
+++ b/scss/utils/_variable.scss
@@ -3,7 +3,11 @@ $clrPrimary: #9356dc;
 $clrSecondary: #99e2d0dc;
 $clrNeutral100: #ffffff;
 $clrNeutral900: #000000;
-$clrGradient: linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+$clrBtnHover: #f5edff;
+$clrTxtGrey: #353535;
+$clrBgLocalisation: #eaeaea;
+$clrBgPresentation: #f7f7f7;
+$clrGradient: linear-gradient(0deg, #9356dc -5.2%, #ff79da 110.74%);
 // FONT
 $fs16: 16px;
 $fs17: 17px;
