--- a/scss/utils/_variable.scss
+++ b/scss/utils/_variable.scss
@@ -1,6 +1,7 @@
 // COLOR
 $clrPrimary: #9356dc;
 $clrSecondary: #99e2d0dc;
+$clrTxtNew: #008766;
 $clrNeutral100: #ffffff;
 $clrNeutral900: #000000;
 $clrBtnHover: #f5edff;
@@ -9,6 +10,7 @@ $clrBgLocalisation: #eaeaea;
 $clrBgPresentation: #f7f7f7;
 $clrGradient: linear-gradient(0deg, #9356dc -5.2%, #ff79da 110.74%);
 // FONT
+$fs14: 14px;
 $fs16: 16px;
 $fs17: 17px;
 $fs18: 18px;
@@ -19,3 +21,5 @@ $fw300: 300;
 $fw400: 400;
 $fw500: 500;
 $fw700: 700;
+//PADDING
+$pInline20: 20px;
