--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -11,23 +11,37 @@
   }
 }
 .btn_2 {
-  padding: 20px 50px;
+  height: 50px;
+  width: 100%;
   margin-bottom: 20px;
   border-radius: 20px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
   border: none;
   position: relative;
+  text-align: start;
+  transition: all 0.3s ease-in-out;
   &:hover {
     background-color: $clrBtnHover;
+    color: $clrPrimary;
+    .btn_2-txt {
+      color: $clrNeutral900;
+    }
   }
   .btn_2-1 {
     padding: 5px;
     height: 24px;
     width: 24px;
     display: inline-block;
+    text-align: center;
     border-radius: 50%;
     background-color: $clrPrimary;
     color: $clrNeutral100;
     position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, 50%);
+  }
+  .btn_2-ico {
+    padding-inline: 30px 10px;
   }
 }
