--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "base/_reset.scss";
 @import "base/_typography.scss";
 @import "components/_button.scss";
+@import "components/_animation.scss";
 @import "pages/_home.scss";
 @import "layout/_header.scss";
 @import "layout/_footer.scss";
