--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -72,7 +72,8 @@
       right: 10px;
     }
     .restaurant_card-img {
-      width: 100%;
+      min-width: 260px;
+      aspect-ratio: 55;
       height: 230px;
       object-fit: cover;
       border-radius: 15px 15px 0 0;
@@ -81,7 +82,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 15px;
+      padding: 10px;
     }
   }
 }
