--- a/scss/components/_animation.scss
+++ b/scss/components/_animation.scss
@@ -1,48 +1,72 @@
 //LOADER
-.loader {
-  position: fixed;
-  z-index: 1;
-  background: $clrNeutral100;
-  width: 100%;
-  height: 100vh;
-  animation: delete 1s 3s forwards;
-  @include flexCenter;
-  .dot_1 {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: $clrPrimary;
-    margin-inline: 5px;
-    animation: loader1 infinite 0.5s alternate;
-  }
-  .dot_2 {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: $clrSecondary;
-    margin-inline: 5px;
-    animation: loader2 infinite 0.5s alternate;
-  }
-  @keyframes loader1 {
-    100% {
-      transform: translateY(-50px);
-    }
-  }
-  @keyframes loader2 {
-    100% {
-      transform: translateY(50px);
-    }
-  }
-  @keyframes delete {
-    to {
-      transform: scale(0);
-    }
+@keyframes loader1 {
+  100% {
+    transform: translateY(-50px);
   }
 }
-
+@keyframes loader2 {
+  100% {
+    transform: translateY(50px);
+  }
+}
+@keyframes delete {
+  to {
+    transform: scale(0);
+  }
+}
 // HEART
-.card_heart-off,
-.card_heart-on {
-  font-size: 25px;
-  cursor: pointer;
+@keyframes opacity {
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes scaleUp {
+  0% {
+    transform: scale3d(0, 0, 1);
+  }
+  33% {
+    transform: scale3d(1, 1, 1);
+  }
+  38% {
+    transform: scale3d(1, 1, 1);
+  }
+  43% {
+    transform: scale3d(1, 1, 1);
+  }
+  48% {
+    transform: scale3d(1, 1, 1);
+  }
+  53% {
+    transform: scale3d(1.4, 1.4, 1);
+  }
+  58% {
+    transform: scale3d(1.05, 1.05, 1);
+  }
+  63% {
+    transform: scale3d(1.2, 1.2, 1);
+  }
+  68% {
+    transform: scale3d(1, 1, 1);
+  }
+  73% {
+    transform: scale3d(1, 1, 1);
+  }
+  78% {
+    transform: scale3d(1, 1, 1);
+  }
+  83% {
+    transform: scale3d(1.4, 1.4, 1);
+  }
+  88% {
+    transform: scale3d(1.05, 1.05, 1);
+  }
+  95% {
+    transform: scale3d(1.2, 1.2, 1);
+  }
+  100% {
+    transform: scale3d(1, 1, 1);
+  }
 }
