--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,12 @@
 @import "utils/_variable.scss";
 @import "utils/_mixins.scss";
 @import "base/_reset.scss";
+@import "base/_container.scss";
 @import "base/_typography.scss";
 @import "components/_button.scss";
 @import "components/_animation.scss";
+@import "components/_heart.scss";
+@import "components/_loader.scss";
 @import "pages/_home.scss";
 @import "layout/_header.scss";
 @import "layout/_footer.scss";
-@import "layout/_grid.scss";
