--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -47,9 +47,18 @@
     margin-bottom: 25px;
   }
 }
+@media screen and (min-width: $desktop) {
+  .howToUse_flex {
+    @include flexCenter;
+    gap: 50px;
+    width: 100%;
+  }
+}
 //SECTION RESTAURANT
-.restaurant_container {
+.restaurant {
   @extend .presentation;
+}
+.restaurant_container {
   @extend .howToUse_container;
   margin-bottom: 0;
   padding-bottom: 30px;
@@ -72,17 +81,22 @@
       right: 10px;
     }
     .restaurant_card-img {
-      min-width: 260px;
       aspect-ratio: 55;
       height: 230px;
       object-fit: cover;
       border-radius: 15px 15px 0 0;
     }
-    .restaurant_card-desc {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
+    .card_title {
+      padding: 10px 0 5px 20px;
     }
+    .card_txt {
+      padding: 0 0 5px 20px;
+    }
+  }
+}
+@media screen and (min-width: $desktop) {
+  .restaurant_flex {
+    @include flexCenter;
+    gap: 20px;
   }
 }
