--- a/scss/components/_loader.scss
+++ b/scss/components/_loader.scss
@@ -1,7 +1,7 @@
 .loader {
   position: fixed;
   z-index: 2;
-  background: $clrNeutral100;
+  background: $clrWhite;
   width: 100%;
   height: 100vh;
   animation: delete 1s 3s forwards;
