--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $clrTxtGrey;
+  background-color: $clrGray-1;
   .footer_container {
     padding-inline: $pInline20;
     padding-block: 20px;
@@ -7,7 +7,7 @@
       margin-top: 10px;
     }
     .footer_ico {
-      color: $clrNeutral100;
+      color: $clrWhite;
       height: 10px;
       width: 10px;
       margin-right: 20px;
