--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,5 @@
 @import "pages/_home.scss";
 @import "layout/_header.scss";
 @import "layout/_footer.scss";
+@import "layout/_banner.scss";
+@import "layout/_menu.scss";
