--- a/scss/utils/_variable.scss
+++ b/scss/utils/_variable.scss
@@ -12,6 +12,7 @@ $clrPurple-1: #f5edff;
 $clrGradient: linear-gradient(0deg, $clrPrimary -5.2%, $clrSecondary 110.74%);
 // FONT
 $fs14: 14px;
+$fs15: 15px;
 $fs16: 16px;
 $fs17: 17px;
 $fs18: 18px;
