--- a/scss/components/_heart.scss
+++ b/scss/components/_heart.scss
@@ -20,3 +20,24 @@
     transform: scale(1.5) translateY(-10%);
   }
 }
+.heart_empty-page,
+.heart_full-page {
+  position: absolute;
+  font-size: $fs24;
+  right: 10px;
+  &:hover {
+    cursor: pointer;
+  }
+}
+.heart_full-page {
+  color: transparent;
+  opacity: 0;
+  background: linear-gradient(200deg, #9356dc 35%, #ff79da 65%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition: all 0.4s ease-in;
+  &:hover {
+    opacity: 1;
+    transform: scale(1.5) translateY(-10%);
+  }
+}
