--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,9 +3,11 @@
   @include flexCenter;
   padding-block: 15px;
   margin-bottom: 5px;
-  box-shadow: 0px 5px 4px 0px #00000026;
   .header_logo {
     width: 162px;
+  }
+  .header_shadow {
+    box-shadow: 0px 5px 4px 0px #00000026;
   }
 }
 //SECTION LOCALISATION
