--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -58,6 +58,7 @@ body {
 .menu_title-desc {
   font-size: $fs16;
   font-weight: $fw300;
+  text-transform: uppercase;
 }
 .plate_title {
   font-size: $fs18;
