--- a/scss/layout/_banner.scss
+++ b/scss/layout/_banner.scss
@@ -1,5 +1,8 @@
-.banner_img {
-  width: 100%;
-  max-height: 275px;
-  object-fit: cover;
+.banner_container {
+  position: relative;
+  .banner_img {
+    width: 100%;
+    max-height: 275px;
+    object-fit: cover;
+  }
 }
