--- a/scss/components/_animation.scss
+++ b/scss/components/_animation.scss
@@ -14,3 +14,12 @@
     transform: scale(0);
   }
 }
+// MENU SPINNER
+@keyframes spinCheck {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
