--- a/scss/components/_heart.scss
+++ b/scss/components/_heart.scss
@@ -9,35 +9,28 @@
   }
 }
 .heart_full {
-  color: transparent;
-  opacity: 0;
-  background: linear-gradient(200deg, #9356dc 35%, #ff79da 65%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  transition: all 0.4s ease-in;
+  @include gradientHeart;
   &:hover {
-    opacity: 1;
-    transform: scale(1.5) translateY(-10%);
+    @include gradientHeartHover;
   }
+}
+.heart_flex {
+  @include flexCenter;
+  position: relative;
+  padding-left: 20px;
 }
 .heart_empty-page,
 .heart_full-page {
-  position: absolute;
   font-size: $fs24;
   right: 10px;
+  position: absolute;
   &:hover {
     cursor: pointer;
   }
 }
 .heart_full-page {
-  color: transparent;
-  opacity: 0;
-  background: linear-gradient(200deg, #9356dc 35%, #ff79da 65%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  transition: all 0.4s ease-in;
+  @include gradientHeart;
   &:hover {
-    opacity: 1;
-    transform: scale(1.5) translateY(-10%);
+    @include gradientHeartHover;
   }
 }
