--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -1,17 +1,77 @@
 .menu_container {
   background-color: $clrGray-3;
-  position: relative;
-  top: -4rem;
-  border-radius: 3rem 3rem 0 0;
   max-width: 1000px;
   margin-inline: auto;
-  @include flexCenter;
-  flex-direction: column;
+  .menu_intro {
+    background-color: $clrGray-3;
+    position: relative;
+    top: -4rem;
+    border-radius: 3rem 3rem 0 0;
+    display: flex;
+    padding: 40px 17px 0 17px;
+    gap: 50px;
+  }
 }
-.menu_intro {
+.menu {
+  padding-inline: 17px;
+  margin: 0 auto;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 40px 17px;
-  position: relative;
+  flex-direction: column;
+
+  .menu_title-desc {
+    border-bottom: 3px solid $clrGreen-1;
+    width: 40px;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+  }
+}
+.menu_starter-choice,
+.menu_mainCourse-choice,
+.menu_dessert-choice {
+  display: flex;
+  background-color: $clrWhite;
+  border-radius: 15px;
+  box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
+  margin-bottom: 15px;
+  max-width: 650px;
+  width: 100%;
+  height: 70px;
+  overflow: hidden;
+  &:hover .plate_check {
+    transition: all 0.8s;
+    margin: 0;
+    cursor: pointer;
+  }
+  &:hover .plate_check-ico {
+    animation: spinCheck 1s;
+  }
+  .plate_desc {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    white-space: nowrap;
+    width: calc(100% - 30px);
+    padding: 10px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  .plate_price {
+    @include flexCenter;
+    align-items: flex-end;
+    padding: 0 20px 10px 0;
+    border-radius: 0 15px 15px 0;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  .plate_check {
+    @include flexCenter;
+    background-color: $clrGreen-1;
+    color: $clrWhite;
+    font-size: $fs24;
+    border-radius: 0 15px 15px 0;
+    width: 70px;
+    margin-right: -5rem;
+  }
 }
