--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -6,12 +6,10 @@
   .header_logo {
     width: 162px;
   }
-  .header_shadow {
-    box-shadow: 0px 5px 4px 0px #00000026;
-  }
 }
 //SECTION LOCALISATION
 .localisation_container {
+  box-shadow: 1px -2px 3px 1px rgb(0 0 0 / 15%);
   background-color: $clrGray-2;
   padding-block: 15px;
   .localisation_form {
