--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -81,7 +81,7 @@
       right: 10px;
     }
     .restaurant_card-img {
-      aspect-ratio: 55;
+      aspect-ratio: 16/9;
       height: 230px;
       object-fit: cover;
       border-radius: 15px 15px 0 0;
